change messaging ui and fix minor text wrapping bugs

--- a/Website/public/css/chatting.css
+++ b/Website/public/css/chatting.css
@@ -1,5 +1,7 @@
 @import './style.css';
-
+body {
+  background-color: #DDE8E8;
+}
 input {
   color: #333;
 }
@@ -7,65 +9,82 @@ input:focus {
   color: #333;
 }
 .right-chat {
-  position: absolute;
-  margin-left: 20%;
-  margin-top: 90px;
-  width: 78%;
+  position: fixed;
+  left: 18%;
+  top: 70px;
+  bottom: 0;
+  right: 0;
   font-weight: 300;
   color: #666;
 }
 .chat-box {
-  height: 600px;
+  position: relative;
+  height: 100%;
 }
 .right-chat .chat-content {
-  background: #fff;
-  width: 100%;
-  height: 500px;
+  background-color: #EAF0F0;
+  position: fixed;
+  bottom: 120px;
+  left: 18%;
+  right: 0;
+  top: 70px;
+  /*background: #fff;*/
   transition: all 0.2s ease;
   background-repeat: no-repeat;
   background-position: 100%;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.15);
-  padding: 25px 20px;
+  border-bottom: 2px solid rgba(255,255,255,.8);
+  padding: 10px 2%;
   overflow: scroll;
 }
 .right-chat .chat-content .msg-block {
-  overflow: hidden;
+  overflow: auto;
   margin-bottom: 15px;
 }
 .right-chat .chat-content .msg-block .msg {
   color: #fff;
   padding: 12px 16px;
-  border-radius: 20px;
+  border-radius: 3px;
   letter-spacing: .5px;
   font-size: 15px;
+  max-width: 80%;
+  overflow-wrap: break-word;
 }
 .right-chat .chat-content .msg-block .received {
   background-color: #60c8d1;
   float: left;
 }
 .right-chat .chat-content .msg-block .sent {
-  background-color: #aaa;
+  background-color: #999;
   float: right;
 }
 .right-chat .chat-form {
   background: #fff;
-  width: 100%;
-  height: 50px;
+  width: 96%;
+  height: 85px;
   background-repeat: no-repeat;
   background-position: 100%;
-  box-shadow: 0 2px 0 rgba(0,0,0,0.15);
+  /*box-shadow: 0 2px 0 rgba(0,0,0,0.15);*/
   border-radius: 3px;
   font-size: 20px;
+  position: absolute;
+  bottom: 15px;
+  left: 2%;
 }
 .input-text {
+  display: inline-block;
   width: 90%;
   height: 100%;
+}
+.input-text textarea{
+  width: 100%;
+  height: 100%;
   border: none;
-  font-size: 20px;
-  padding-left: 20px;
+  padding: 10px 20px;
+  resize: none;
+  font-size: 15px;
 }
 .send-text {
-  width: 50px;
+  width: 10%;
   height: 100%;
   color: #fff;
   font-size: 15px;
